<resources>
    <string name="app_name">money keeper</string>
    <string name="categories">Categories</string>
    <string name="transactions">Transactions</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="categoryName">category\'s name</string>
    <string name="saveCategory">save category</string>
    <string name="addIncomeButton">add income</string>
    <string name="addExpenseButton">add expense</string>
    <string name="transactionDescription">transaction\'s description</string>
    <string name="transactionValue">transaction\'s value</string>
    <string name="accounts">accounts</string>
    <string name="income">income</string>
    <string name="incomeName">income name</string>
    <string name="saveIncome">save income</string>
</resources>