<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/incomesFragment"
        android:title="@string/income"
        android:icon="@drawable/ic_income"/>
    <item
        android:id="@+id/categoriesFragment"
        android:title="@string/categories"
        android:icon="@drawable/ic_list"/>
    <item
        android:id="@+id/mainFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_diagram"/>
    <item
        android:id="@+id/transactionsFragment"
        android:title="@string/transactions"
        android:icon="@drawable/ic_statistics"/>
    <item
        android:id="@+id/accountsFragment"
        android:title="@string/accounts"
        android:icon="@drawable/ic_account"/>
</menu>