<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/color_bg">

    <EditText
        android:id="@+id/editTextTransactionNameIncome"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/color_bg"
        android:ems="10"
        android:hint="@string/transactionDescription"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerIncomes"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_bg"
        android:contentDescription="@string/transactions"
        android:minHeight="48dp"
        android:padding="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTransactionNameIncome" />

    <EditText
        android:id="@+id/editTextNumberIncomes"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/color_bg"
        android:ems="10"
        android:hint="@string/transactionValue"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIncomes" />

    <Button
        android:id="@+id/submitIncomesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/color_bg"
        android:padding="10dp"
        android:text="@string/addIncomeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberIncomes" />
</androidx.constraintlayout.widget.ConstraintLayout>